--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ South==0.7.6
 # Packages needed for running the tests. Needed by contributors.
 # ==============================================================
 Fabric
+ipdb
 mock
 django-nose
 coverage
